--- a/mblog/templates/header.html
+++ b/mblog/templates/header.html
@@ -1,4 +1,13 @@
 <!-- header.html -->
+{% load staticfiles %}
+<style>
+    img {
+        display: block;
+        margin: 0 auto;
+    }
+</style>
 <div class='well'>
 <h1 style="font-family:微軟正黑體;">歡迎光臨 文學天地</h1>
+    <img src="{% static "images/green-sea-turtle-swimming-in-ocean-sea-PBM9KVK.jpg" %}" height="200" width="200">
+    <!img src="{% static "images/candid-P953UYK.jpg" %}" height="200" width="200"-->  
 </div>
