--- a/mblog/templates/base.html
+++ b/mblog/templates/base.html
@@ -36,7 +36,7 @@
                             <a href='http://tar.so/news' class='list-group-item'>即時新聞</a>
                             <a href='http://drho.tw/' class='list-group-item'>電視新聞</a>
                         </div>
-                        <script type="text/javascript" src="http://feedjit.com/serve/?vv=1515&amp;tft=3&amp;dd=0&amp;wid=&amp;pid=0&amp;proid=0&amp;bc=FFFFFF&amp;tc=000000&amp;brd1=012B6B&amp;lnk=135D9E&amp;hc=FFFFFF&amp;hfc=2853A8&amp;btn=C99700&amp;ww=200&amp;went=10"></script><noscript><a href="http://feedjit.com/" class='list-group-item'>Live Traffic Stats</a></noscript>
+                        <script type="text/javascript" src="http://feedjit.com/serve/?vv=1515&amp;tft=3&amp;dd=0&amp;wid=&amp;pid=0&amp;proid=0&amp;bc=FFFFFF&amp;tc=000000&amp;brd1=012B6B&amp;lnk=135D9E&amp;hc=FFFFFF&amp;hfc=2853A8&amp;btn=C99700&amp;ww=200&amp;went=10"></script><noscript><a href="http://feedjit.com/">Live Traffic Stats</a></noscript>
                     </div>
                 </div>
             </div>
