--- a/mblog/templates/base.html
+++ b/mblog/templates/base.html
@@ -37,15 +37,15 @@
                             <a href='http://drho.tw/' class='list-group-item'>電視新聞</a>
                         </div>
                         <!-- script type="text/javascript" src="https://feedjit.com/serve/?vv=1515&amp;tft=3&amp;dd=0&amp;wid=&amp;pid=0&amp;proid=0&amp;bc=FFFFFF&amp;tc=000000&amp;brd1=012B6B&amp;lnk=135D9E&amp;hc=FFFFFF&amp;hfc=2853A8&amp;btn=C99700&amp;ww=200&amp;went=10"></script><noscript><a href="https://feedjit.com/">Live Traffic Stats</a></noscript-->
-						<center><script>var color='blue';</script><script type='text/javascript' src='https://alivestats.com/widget.js'></script><br><a href='https://alivestats.com' target='_blank' title='Live Blog Stats'>Live Blog Stats</a></center>
+						<center><script>var color='blue';</script><script type='text/javascript' src='https://alivestats.com/widget.js'></script><br><noscript><a href='https://alivestats.com' target='_blank' title='Live Blog Stats'>Live Blog Stats</a></noscript></center>
 					</div>
-                </div>
-            </div>
+                </div>>
                     <div class='col-sm-8 col-md-8'>
+            </div
                         <div class='panel panel-default'>
-                            <div class='panel-heading'>                 
                                 {% block headmessage %}{% endblock %}
                             </div>
+                            <div class='panel-heading'>                 
                             <div class='panel-body'>
                                   {% block content %}{% endblock %}
                             </div>
