--- a/mblog/templates/base.html
+++ b/mblog/templates/base.html
@@ -36,7 +36,7 @@
                             <a href='http://tar.so/news' class='list-group-item'>即時新聞</a>
                             <a href='http://drho.tw/' class='list-group-item'>電視新聞</a>
                         </div>
-                        <script type='text/javascript' src='https://alivestats.com/feed/widget.js'></script><br><a href='https://alivestats.com' target='_blank' title='Live Blog Stats'>Live Blog Stats</a>
+                        <script type='text/javascript' src='https://alivestats.com/feed/widget.js'></script><br><noscript><a href='https://alivestats.com' target='_blank' title='Live Blog Stats'>Live Blog Stats</a></noscript>
 					</div>
                 </div>>
                     <div class='col-sm-8 col-md-8'>
