--- a/mblog/templates/base.html
+++ b/mblog/templates/base.html
@@ -35,13 +35,13 @@
                             <a href='/' class='list-group-item'>HOME</a>
                             <a href='http://tar.so/news' class='list-group-item'>即時新聞</a>
                             <a href='http://drho.tw/' class='list-group-item'>電視新聞</a>
-                        </div>
-                        <p><script id="_wauzat">var _wau = _wau || []; _wau.push(["classic", "bwiihjx61225", "zat"]);
+                            <p class='list-group-item'><script id="_wauzat">var _wau = _wau || []; _wau.push(["classic", "bwiihjx61225", "zat"]);
 								(function() {var s=document.createElement("script"); s.async=true;
 								s.src="//widgets.amung.us/classic.js";
 								document.getElementsByTagName("head")[0].appendChild(s);
 								})();</script>
-						</p>
+							</p>
+						</div>
 					</div>
                 </div>>
                     <div class='col-sm-8 col-md-8'>
